--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>renren-fast</module>
         <module>renren-generator</module>
         <module>guilimall-common</module>
+        <module>guilimall-gateway</module>
     </modules>
 
 
