--- a/guilimall-gateway/src/main/resources/application.yml
+++ b/guilimall-gateway/src/main/resources/application.yml
@@ -8,13 +8,39 @@ spring:
     # 配置网关
     gateway:
       routes:
-      - id: test_route
-        uri: http://www.baidu.com
+      - id: product_route
+        uri: lb://guilimall-product
         predicates:
-        - Query=url,baidu
-      - id: qq_route
-        uri: http://www.qq.com
+          - Path=/api/product/**
+        filters:
+          - RewritePath=/api/(?<segment>.*),/$\{segment}
+
+      - id: third_party_route
+        uri: lb://guilimall-third-party
         predicates:
-        - Query=url,qq
+          - Path=/api/thirdparty/**
+        filters:
+          - RewritePath=/api/thirdparty/(?<segment>.*),/$\{segment}
+
+      - id: member_route
+        uri: lb://guilimall-member
+        predicates:
+          - Path=/api/member/**
+        filters:
+          - RewritePath=/api/(?<segment>.*),/$\{segment}
+
+      - id: ware_route
+        uri: lb://guilimall-ware
+        predicates:
+          - Path=/api/ware/**
+        filters:
+          - RewritePath=/api/(?<segment>.*),/$\{segment}
+
+      - id: admin_route
+        uri: lb://renren-fast
+        predicates:
+          - Path=/api/**
+        filters:
+          - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
 server:
   port: 88
