--- a/guilimall-product/src/main/resources/application.yml
+++ b/guilimall-product/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password: 123456
     url: jdbc:mysql://192.168.196.131:3307/guilimall_pms
     driver-class-name: com.mysql.cj.jdbc.Driver
+  application:
+    name: guilimall-product
+  profiles:
+    active: dev
 
 # 配置mybatis-plus
 mybatis-plus:
@@ -14,6 +18,11 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 
 server:
   port: 10001
+logging:
+  level:
+    com.swjtu.guilimall: debug
